Update README with samples section and JDK 22
- Update JDK version from 21 to 22 (stable FFM API)
- Add Samples section with all 13 sample applications
- Add Running Samples section with gradle commands
- Update Project Structure to include zmq-samples and zmq-benchmark
- Simplify Quick Start examples
- Match netzmq README style